Updates icon and title; fixes spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,9 +25,6 @@ body {
   width: 100%;
   position: relative;
   z-index: 1;
-  //background-image: url('/images/connections.png');
-  //background-position: center;
-  //background-repeat: repeat;
 }
 
 h1, h2, h3 {
@@ -78,8 +75,10 @@ h1, h2, h3 {
   z-index: -100;
   height : 100px;
   width : 100%;
-  position: absolute;
   box-shadow: 0 25px 20px -10px #333 inset;
+
+  position: absolute;
+  bottom: 0;
 }
 
 #bottomBanner {
@@ -121,12 +120,15 @@ h1, h2, h3 {
 }
 
 #mainBox {
-  padding : 30px 180px 20px 180px;
+  //padding : 30px 180px 20px 180px;
+  padding: 30px 10% 20px 10%;
   text-align: justify;
   //color: #444;
   color : #eee;
   font-size: 14pt;
 }
+
+//@media screen and (min-width: 640px)
 
 #mainBox h1, h2, h3 {
   color: white;
